--- a/src/scss/_dialog.scss
+++ b/src/scss/_dialog.scss
@@ -1,5 +1,16 @@
 @use "variables" as var;
 
+@keyframes chatFade {
+
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+
+}
+
 @keyframes chatBeat {
 
   0% {
@@ -234,6 +245,7 @@
   &[data-active=true] {
     visibility: visible;
     opacity: 1;
+    animation: chatFade 0.5s ease-out;
   }
 
 }
