--- a/src/scss/_dialog.scss
+++ b/src/scss/_dialog.scss
@@ -242,7 +242,7 @@
 
   }
 
-  &[data-active=true] {
+  &[data-chatbot=true] {
     visibility: visible;
     opacity: 1;
     animation: chatFade 0.5s ease-out;
