--- a/src/scss/_dialog.scss
+++ b/src/scss/_dialog.scss
@@ -56,15 +56,14 @@
 
 .chatbot {
   position: fixed;
-  bottom: 80px;
+  bottom: var(--chat-gap-y-sm);
   z-index: 9999;
   visibility: hidden;
+  appearance: none;
   opacity: 0;
 
   @media (min-width: var.$media-min) {
-    position: fixed;
-    bottom: 30px;
-    z-index: 9999;
+    bottom: var(--chat-gap-y-lg);
   }
 
   &__btn {
@@ -72,6 +71,8 @@
     display: flex;
     align-items: center;
     border: 0;
+    padding: 0;
+    margin: 0;
     cursor: pointer; 
     background: transparent; 
   }
@@ -80,9 +81,9 @@
     position: relative;
     display: block;
     padding: 15px 12px 15px 23px;
-    background: var(--chat-one);
-    color: var(--chat-txt);
-    font-size: 17px;
+    background: var(--chat-txt);
+    color: var(--chat-color);
+    font-size: var(--chat-size-sm);
     line-height: 1.2;
     border-radius: 50px;
     -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, .3);
@@ -92,7 +93,7 @@
 
     @media (min-width: var.$media-min) {
       padding: 16px 13px 16px 27px;
-      font-size: 19px;
+      font-size: var(--chat-size-lg);
     }
 
     &:after {
@@ -100,7 +101,7 @@
       position: absolute;
       top: 0;
       left: 30px;
-      background-color: var(--chat-one);
+      background-color: var(--chat-txt);
       content: '';
       width: 100%;
       height: 100%;
@@ -112,12 +113,12 @@
   &__icon {
     position: relative;
     border-radius: 100%;
-    width: 60px;
+    width: 58px;
     aspect-ratio: 1 / 1;
     z-index: 1;
 
     @media (min-width: var.$media-min) {
-      width: 64px;
+      width: 62px;
     }
 
     &:before {
@@ -133,8 +134,8 @@
       background-position: center;
       width: 100%;
       height: 100%;
-      background-color: var(--chat-two);
-      border: 4px solid var(--chat-one);
+      background-color: var(--chat-icon);
+      border: 4px solid var(--chat-txt);
       border-radius: 100%;
       z-index: 1;
     }
@@ -144,7 +145,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      background-color: var(--chat-one);
+      background-color: var(--chat-txt);
       content: '';
       border-radius: 100%;
       width: 100%;
@@ -207,10 +208,10 @@
   }
 
   &--left {
-    left: 20px;
+    left: var(--chat-gap-x-sm);
 
     @media (min-width: var.$media-min) {
-      left: 30px;
+      left: var(--chat-gap-x-lg);
     }
 
     .chatbot__dialog {
@@ -225,10 +226,10 @@
   }
 
   &--right {
-    right: 20px;
+    right: var(--chat-gap-x-sm);
 
     @media (min-width: var.$media-min) {
-      right: 30px;
+      right: var(--chat-gap-x-lg);
     }
 
     .chatbot__dialog {
@@ -244,6 +245,7 @@
 
   &[data-chatbot=true] {
     visibility: visible;
+    appearance: auto;
     opacity: 1;
     animation: chatFade 0.5s ease-out;
   }
